Added scripted tests
Basically just copied the sbt-plugin-tester.